--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="item active">
-              <img class="d-block img-fluid" src="/img/gym_facility_entrance.jpeg" alt="First slide">
+              <img class="d-block img-fluid" src="img/gym_facility_entrance.jpeg" alt="First slide">
               <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="item">
-              <img class="d-block img-fluid" src="/img/module.jpeg" alt="Second slide">
+              <img class="d-block img-fluid" src="img/module.jpeg" alt="Second slide">
               <div class="carousel-caption d-none d-md-block"></div>
             </div>
           </div>
