--- a/index.html
+++ b/index.html
@@ -108,33 +108,10 @@
         </p>
       </div>
 
-      <div class="col-lg-12">
-        <div id="carouselFacility" class="carousel slide" data-ride="carousel" data-interval="3000" data-pause="hover">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselFacility" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselFacility" data-slide-to="1"></li>
-          </ol>
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <img class="d-block img-fluid" src="img/gym_facility_entrance.jpeg" alt="First slide">
-              <div class="carousel-caption d-none d-md-block"></div>
+
+            <div class="col-sm-12">
+              <img class="img-responsive center-block"  src="img/gym_facility_entrance.jpeg" alt="">
             </div>
-            <div class="item">
-              <img class="d-block img-fluid" src="img/module.jpeg" alt="Second slide">
-              <div class="carousel-caption d-none d-md-block"></div>
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselFacility" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Précédent</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselFacility" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Suivant</span>
-        </a>
-      </div>
-    </div>
   </section>
 
   <section id="athletes" class="container content-section text-center ">
@@ -142,7 +119,7 @@
       <div class="col-lg-4 col-sm-6 text-center">
         <img class="img-circle img-responsive img-center center-block" src="img/samuel_hould_small.jpeg" alt="">
         <h3> Samuel hould</h3>
-        <p>LHJMQ Rempart de québec</p>
+        <p>LHJMQ Remparts de québec</p>
       </div>
       <div class="col-lg-4 col-sm-6 text-center">
         <img class="img-circle img-responsive img-center center-block" src="img/loik_poudrier_small.jpeg" alt="">
@@ -153,24 +130,24 @@
         <div class="col-lg-4 col-sm-6 text-center">
           <img class="img-circle img-responsive img-center center-block" src="img/matthew_newberry_small.jpeg" alt="">
           <h3>Matthew Newberry</h3>
-          <p>Voltigeur de Drummondville</p>
+          <p>LHJMQ Voltigeurs de Drummondville</p>
         </div>
       </div>
       <div class="row ">
         <div class="col-lg-4 col-sm-6 text-center">
           <img class="img-circle img-responsive img-center center-block" src="img/anthony_richard_small.jpeg" alt="">
           <h3>Anthony Richard</h3>
-          <p></p>
+          <p>AHL Admirals de Milwauke</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
           <img class="img-circle img-responsive img-center center-block" src="img/simon_lafrance_small.jpeg" alt="">
           <h3>Simon Lafrance</h3>
-          <p></p>
+          <p>LHJMQ Foreurs de Val-d'Or</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
           <img class="img-circle img-responsive img-center center-block" src="img/jonathan_deschamps_small.jpeg" alt="">
           <h3>Jonathan Deschamps</h3>
-          <p></p>
+          <p>LHJMQ Cataractes de Shawinigan</p>
         </div>
       </div>
     </section>
